add sun.lwawt and sun.lwawt.macosx to add-opens
GitOrigin-RevId: d2faee9404dc9e3a66eb9777c43b56d584f7381b